2007-10-24  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_initialize):
	new mode: AUTOMODE

	* avatarsay (processfile):
	fix: use clearerr when ignore_eof is set

	* configure, Makefile.in:
	compatiblity to FreeBSD (pmake)
	
	* avatar.c (avt_mb_encoding):
	try to autodetect internal encoding

	* avatar.c (MB_DEFAULT_ENCODING):
	fixed typo

	* avatar.c (avt_drawchar, avt_ask):
	don't use wint_t for compatiblity reasons (wasn't needed anyway)

2007-10-16  Andreas K. Foerster  <info@akfoerster.de>

	* version 0.14.3 released

	* akfavatar.pas (ScreenSize):
	implemented as functuion (was a variable)

	* akfavatar.pas (AvatarImageData, LoadSoundData, ShowImageData):
	new functions

	* font.c, avatar.c:
	support for 9x18 font with 800x600 resolution
	640x480 only used, when compiled for symbol "VGA"
	
	* avatar.c (avt_drawchar):
	added general support for fixed fontwidth > 8 <= 16

	* avatarsay:
	new option: --popup

	* gnome-avatarsay:
	write .encoding into new files

	* avatar.c (avt_delete_lines, avt_insert_lines):
	optimized scrolling

	* configure, Makefile.in:
	can be build from a separate build directory

2007-10-07  Andreas K. Foerster  <info@akfoerster.de>

	* version 0.14.2 released

	* gnome-akfavatar:
	german translation

	* acatarsay.c (move_out):
	don't wait after moving out, unless running as loop

	* avatarsay.c (checkoptions, help):
	new option: "--encoding="

	* avatar.c (avt_mb_decode):
	error-tolerance for broken multibyte encodings (UTF-8)

	* avatarsay.c (check_system_encoding):
	new function: try to get encoding from LC_ALL, LC_CTYPE or LANG

	* gnome-akfavatar:
	open Website from menu
	
	* avatarsay.c (help, handle_image_command)
	(handle_avatarimage_command, handle_audio_command):
	datadir needs no trailing slash anymore

2007-09-27  Andreas K. Foerster  <info@akfoerster.de>

	* version 0.14.1 released

	* avatar.c (avt_say):
	fix: check for events with each char, when the delay is switched off
